Zamień sposób logowania

--- a/readme
+++ b/readme
@@ -52,12 +52,12 @@ Komunikacja:
 Pseudovelma:
 	/pseudovelma/vels			wejście prędkości kół
 	/pseudovelma/pose			wyjście pozycji
-	/pseudovelma/twist			aktuanlna prędkość platformy
+	/pseudovelma/twist			aktualna prędkość platformy
 Omnivelma:
 	/omnivelma/vels				wejście prędkości kół
 	/omnivelma/pose				wyjście pozycji
 	/omnivelma/encoders			dane enkoderów ze wszystkich kół
-	/omnivelma/twist			aktuanlna prędkość platformy
+	/omnivelma/twist			aktualna prędkość platformy
 	/omnivelma/set_friction		ustawienie wartości tarcia rolek
 	/omnivelma/set_inertia		ustawienie masy i tensoru dla wszystkich składowych modelu
 Ocznica:
