--- a/docs/readme
+++ b/docs/readme
@@ -10,7 +10,20 @@ Narysować graf połączeń elementów.
 Za duża prędkość kół psuje symulację w V-Repie
 Bullet ssie
 Gazebo bardzo dobrze działa
+Czujnik laserowy SICK LSM100-10000
 
 Do zrobienia:
-Masa transportowana i intefejs jej zmiany. (może być i tak za mało dokładne, żeby był sens)
-Lalkarz wczytuje Encodery i wyświetla drugi słupek?
+Encodery składają się z dwóch części vels
+	-> rekompilacja Vrevelmy
+Przy okazji pododawać sprawdzenia, czy udało się stworzyć nadajniki itp.
+Kilka skryptów do różnych testów i uruchomień zamiast if
+Zrobić tak, aby nazwa topica była nazwą modelu
+Stamped dla: (http://answers.ros.org/question/53930/roscpp-warning-in-rospublisherpublish/)
+	pseudovelma/pose
+	pseudovelma/twist
+	omnivelma/pose
+	omnivelma/twist
+	vrevelma/pose
+	vrevelma/twist
+Lalkarz wczytuje Encodery (jedną część vels) i wyświetla drugi słupek
+Wsadzić model laserowego czujnika (monokl), oskryptować na podstawie lsm1xx
