--- a/docs/about.tex
+++ b/docs/about.tex
@@ -86,7 +86,7 @@ Należy także wziąć tutaj pod uwagę nieprzewidywalne opory, jak nierówne ta
 
 \begin{figure}[H]
 \centering
- \includegraphics[width=0.5\textwidth]{graphics/base_top.pdf}
+ \includegraphics[width=0.5\textwidth]{graphics/base_top.png}
 \caption{Platforma mobilna --- widok od góry. Przegub zawiasowy łączy dwie części.}
 \label{fig:base_top}
 \end{figure} 
