--- a/po/main.tex
+++ b/po/main.tex
@@ -43,7 +43,7 @@
 		\end{columns}
 	\end{frame}
 	\begin{frame}
-		\frametitle{Cel projektu --- opracowanie modelu symulacyjnego}
+		\frametitle{Cel projektu --- opracowanie modelu symulacyjnego platformy}
 		Do czego przydatny jest model:
 		\begin{itemize}
 			\item Pozwala bezpiecznie testować nowe oprogramowanie.
@@ -55,7 +55,7 @@
 		\begin{itemize}
 			\item Model reaguje na momenty siły i tarcie w sposób zbliżony do robota.
 			\item Przyjmuje taką samą postać sygnałów sterujących.
-			\item Generuje odpowiednie dane z czujników wirtualnych.
+			\item Generuje dane z czujników wirtualnych, zbliżone do rzeczywistych.
 		\end{itemize}
 	\end{frame}
 	\begin{frame}
@@ -65,7 +65,7 @@
 			\item Robot i model poruszają się tylko po płaszczyźnie.
 			\item Odwzorowujemy kinematykę, dynamikę i tarcie.
 			\item Mogą występować poślizgi kół.
-			\item Symulacja obarczona jest naturalnym błędem natury liczb zmiennoprzecinkowych.
+			\item Symulacja obarczona jest naturalnym błędem liczb zmiennoprzecinkowych.
 		\end{itemize}
 	\end{frame}
 
@@ -131,12 +131,6 @@
 		\includegraphics[width=0.5\textwidth]{graphics/base_dims.pdf} 
 	\end{frame}
 
-	\begin{frame}
-		\frametitle{Struktura projektu}
-		\centering
-		\includegraphics[width=\textwidth]{graphics/comm.pdf} 
-	\end{frame}
-	
 	\section{Implementacja}
 	\begin{frame}
 		\frametitle{Modele}
@@ -158,7 +152,11 @@
 			\end{itemize}
 		\end{columns}
 	\end{frame}
-	
+	\begin{frame}
+		\frametitle{Struktura projektu}
+		\centering
+		\includegraphics[width=\textwidth]{graphics/comm.pdf} 
+	\end{frame}
 	\section{Pomiary}
 	\begin{frame}
 		\frametitle{Sprzęt i wersje programów}
@@ -191,7 +189,7 @@
 		\frametitle{Badanie odometrii}
 		\centering
 		\includegraphics[width=0.7\textwidth]{graphics/reen_1.png} \\
-		Model kinematyczny porusza się na podstawie danych generowanych przez model czujnika w modelu dynamicznym.
+		Model kinematyczny porusza się na podstawie danych generowanych przez enkodery w modelu dynamicznym.
 	\end{frame}
 	\begin{frame}
 		\frametitle{Pokaz?}
@@ -204,7 +202,7 @@
 		\begin{itemize}
 			\item Opracowano 3 modele symulacyjne i model pomocniczy, które pozwalają na symulację dynamiki i kinematyki.
 			\item Modele mają różną budowę wewnętrzną i działają na różnych symulatorach.
-			\item Przebiegi ścieżek są zbliżone do siebie.
+			\item Przebiegi ścieżek są wystarczająco dobrze zbliżone do siebie.
 			\item Modele generują dane z zasymulowanych czujników.
 			\item Stworzono model podłoża o zmiennym współczynniku tarcia.
 			\item Stworzono zestaw programów ułatwiających testowanie.
@@ -213,16 +211,17 @@
 	\begin{frame}
 		\frametitle{Perspektywy rozwoju}
 		\begin{itemize}
-			\item Porównanie działania modelu i robota przy tym samym sterowaniu.
+			\item Porównanie działania modeli i robota przy tym samym sterowaniu.
 			\item Usprawnienie interfejsu do sterowania ręcznego.
 			\item Próba implementacji modelu czujnika laserowego.
-			\item Szczegółowa analiza modelu i określenie przyczyn rozbieżności.
-			\item Rozwój modelu w wielu innych aspektach.
+			\item Szczegółowa analiza modeli i określenie przyczyn rozbieżności.
+			\item Dopracowanie w modelach współczynników takich, jak masy, tarcia i inercja.
 		\end{itemize}
 	\end{frame}
 	\begin{frame}
 		\frametitle{Koniec}
 		\centering
-		Dziękuję za uwagę.
+		Dziękuję za uwagę.\\
+		Projekt i ta prezentacja znajdują się na \url{https://github.com/Antyradek/omnivelma}.
 	\end{frame}
 \end{document}
