--- a/docs/readme
+++ b/docs/readme
@@ -17,4 +17,8 @@ Lalkarz nie przyjmuje nazwy odbiornika, jest zdefiniowana z góry
 	-e jest pojedyńczym argumentem
 Odpowiednie współczynniki inercji (obliczyć z Wikipedii)
 	https://en.wikipedia.org/wiki/List_of_moments_of_inertia
-Wsadzić model laserowego czujnika (monokl), oskryptować na podstawie lsm1xx
+Dodać szum do Monokla
+Stworzyć system ramek tf2 
+	U Pseudovelmy względem world
+	U Monokla względem omnivelmy (lub world) w osobnej wtyczce, na aktualizację (która również musi określić swoją prawolewość z nazwy)
+	Wyciągnąć do linka serce tak, aby było dostępne z wtyczki
