Dodaj zdjęcie sensora

--- a/docs/about.tex
+++ b/docs/about.tex
@@ -144,6 +144,10 @@ Odległość osi od płaszczyzny nieznacznie zmienia się przy przenoszeniu cię
 Środkowy przegub zmniejsza ich przenoszenie na drugą część platformy.
 Poślizg kół powoduje, że enkodery nie mogą być jedynymi czujnikami służącymi do wyznaczania pozycji bazy, gdyż są zbyt mało dokładne \cite{heavy}.
 
+\section{Czujnik laserowy}
+Platforma wyposażona jest w dwa czujniki laserowe firmy SICK.
+
+
 \section{Składniki systemu}
 Środowisko symulacyjne składa się z kilku odrębnych modułów, które komunikują się ze sobą poprzez specjalne interfejsy wykorzystujące kolejki wiadomości.
 Taka implementacja komunikacji pozwala zmieniać i reimplementować poszczególne elementy i używać różnych języków programowania zachowując tę samą komunikację między składnikami nie tracąc kompatybilności między sobą.
