--- a/docs/model.tex
+++ b/docs/model.tex
@@ -1,4 +1,4 @@
-\chapter{Model}
+\chapter{Model platformy}
 Należy wpierw stworzyć doskonały model kinematyczny, aby móc porównać z nim stworzony model dynamiczny, oraz fizyczną platformę.
 Dzięki temu można łatwo oszacować jak bardzo błędy symulacji, oraz błędy niedoskonałości fizycznego modelu odstają od matematycznych wyliczeń.
 
@@ -26,7 +26,6 @@ $\omega_z$ & & Prędkość kątowa w osi Z, wektor skierowany w górę. \\
 \caption{Opisy i wartości symboli używanych we wzorach i rysunkach.}
 \label{tab:dims}
 \end{table}
-
 
 \section{Sposób zapisu w formacie SDF}
 \emph{Simulation Description Format} (SDF) jest formatem XML pozwalającym na określenie elementów i zależności pomiędzy nimi w przestrzeni trójwymiarowej, w szczególności budowy i rozmieszczenia robotów.
