--- a/docs/bibliography.tex
+++ b/docs/bibliography.tex
@@ -58,6 +58,10 @@ Strona internetowa platformy programistycznej \emph{Robot Operating System}. \\
 Strona internetowa standardu SDF. \\
 \url{http://sdformat.org/spec}
 
+\bibitem{sick_website}
+Strona internetowa producenta czujników laserowych SICK. \\
+\url{https://www.sick.com/de/en/detection-and-ranging-solutions/2d-lidar-sensors/lms1xx/lms100-10000/p/p109841}
+
 \bibitem{ode_contact}
 Dokumentacja maszyny ODE z wyjaśnieniem działania kolizji. \\
 \url{http://ode-wiki.org/wiki/index.php?title=Manual:_Joint_Types_and_Functions#Contact}
